--- a/dev/index.html
+++ b/dev/index.html
@@ -69,9 +69,9 @@ end
 ([1.0, 2.0], [3.0, 4.0])</code></pre><p>Finally, we wrap the objective, gradient, and Hessian functions defined by the F-1 method.</p><pre><code class="language-julia"># Initialize the cache for storing reusable objects
 mem = F1Method.initialize_mem(x₀, p₀)
 # Define the functions via the F1 method
-F1_objective(p) = F1Method.f̂(f, F, ∇ₓF, mem, p, MyAlg())
-F1_gradient(p) = F1Method.∇f̂(f, F, ∇ₓf, ∇ₓF, mem, p, MyAlg())
-F1_Hessian(p) = F1Method.∇²f̂(f, F, ∇ₓf, ∇ₓF, mem, p, MyAlg())
+F1_objective(p) = F1Method.objective(f, F, ∇ₓF, mem, p, MyAlg())
+F1_gradient(p) = F1Method.gradient(f, F, ∇ₓf, ∇ₓF, mem, p, MyAlg())
+F1_Hessian(p) = F1Method.hessian(f, F, ∇ₓf, ∇ₓF, mem, p, MyAlg())
 
 # output
 
